bin/testsuite/tests/compiler/src/errors/compiler67.swg
#global testerror "Err0651"
#print(1 / 0.0'f32)
